tests/e2e/semantics/global_assignment.error
Error: syntax error in story at line 3, column 1

3|    a = 2
      ^^^

E0127: `a` is readonly and can not be assigned to.
